org.eclipse.jdt.compiler.apt.tests/processors/org/eclipse/jdt/compiler/apt/tests/processors/negative/NegativeModelProc#checkNegative4().mjava
	/**
	 * Check the model of resources/targets.negative.pa.Negative4
	 * @return true if all tests passed
	 */
	public boolean checkNegative4() throws Exception {
		TypeElement elementN4 = _elementUtils.getTypeElement("targets.negative.pa.Negative4");
		if (null == elementN4 || elementN4.getKind() != ElementKind.CLASS) {
			reportError("Element Negative4 was not found or was not a class");
			return false;
		}

		return checkModel(Collections.singletonList(elementN4), NEGATIVE_4_MODEL, "Negative4");
	}

